feat (web): new slides and examples

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,6 +11,10 @@ pages:
         url: /web/slides/01-minimal/
       - title: "HTML Tree"
         url: /web/slides/02-tree/
+      - title: "Styles"
+        url: /web/slides/03-styles/
+      - title: "CSS"
+        url: /web/slides/04-css/
   - title: JavaScript Programming
     children:
       - title: "Environment"
