--- a/frameworks/webpack/building-library/package.json
+++ b/frameworks/webpack/building-library/package.json
@@ -2,7 +2,10 @@
   "private": true,
   "scripts": {},
   "devDependencies": {
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
     "@web/dev-server": "^0.1.38",
+    "babel-loader": "^9.1.2",
     "webpack": "^5.76.0",
     "webpack-cli": "^5.0.1"
   }
