--- a/frameworks/webpack/building-library/umd/package.json
+++ b/frameworks/webpack/building-library/umd/package.json
@@ -1,9 +1,8 @@
 {
   "private": true,
   "scripts": {},
+  "main": "dist/toollib.js",
   "devDependencies": {
-    "@babel/core": "^7.21.4",
-    "@babel/preset-env": "^7.21.4",
     "@web/dev-server": "^0.1.38",
     "babel-loader": "^9.1.2",
     "webpack": "^5.76.0",
