--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -39,3 +39,5 @@ pages:
         url: /frameworks/react/slides/01-start-jsx/
       - title: "React Development Environment"
         url: /frameworks/react/slides/02-environment/
+      - title: "React Components"
+        url: /frameworks/react/slides/03-components/
