--- a/server/postgresql/3-docker-compose/docker-compose.yml
+++ b/server/postgresql/3-docker-compose/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   db:
     image: postgres
+    container_name: my-postgres
     volumes:
       - postgres-data:/var/lib/postgresql/data
       - postgres-impexp:/home
